syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

message ExecutionPrincipalInfo {
  string principal = 1;
  PrincipalType principalType = 2;
  bool shouldValidateRbac = 3;
}

enum PrincipalType {
  UNKNOWN = 0;
  USER = 1;
  USER_GROUP = 2;
  API_KEY = 3;
  SERVICE = 4;
}
